updated with @Daniel Ramos changes

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "build": "babel src -x .js -d build",
     "start": "node build/app.js",
-    "start:dev": "nodemon --exec babel-node src/app.js",
+    "start:dev": "nodemon --exec babel-node src/app.js --banned-words-path ./examples/banned-words.txt --text-path ./examples/text.txt --output ./examples/censored-text.txt",
     "lint": "eslint --ext .js ./src",
     "lint:fix": "eslint --ext .js --fix ./src",
     "test": "jest",
@@ -30,15 +30,10 @@
     "@babel/plugin-transform-modules-commonjs": "7.10.4",
     "@types/jest": "^26.0.14",
     "babel-jest": "^26.3.0",
-    "eslint": "^7.11.0",
+    "eslint": "^7.9.0",
     "eslint-config-prettier": "6.11.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "3.1.4",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "jest": "^26.5.3",
+    "jest": "^26.4.2",
     "nodemon": "^2.0.4",
     "prettier": "^2.1.1",
     "rimraf": "3.0.2"
