Shop with tests

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "build": "babel src -x .js -d build",
     "start": "node build/app.js",
-    "start:dev": "nodemon --exec babel-node src/app.js --banned-words-path ./examples/banned-words.txt --text-path ./examples/text.txt --output ./examples/censored-text.txt",
+    "start:dev": "nodemon --exec babel-node src/app.js",
     "lint": "eslint --ext .js ./src",
     "lint:fix": "eslint --ext .js --fix ./src",
     "test": "jest",
